# mou

./: Cargo.toml  NOTES.md  README.md
llm_modelfiles/: deepseek_temp0
src/: duckdb_index.rs  garbage_collection.rs  indexing.rs  main.rs  query.rs  responder.rs  runtime_settings.rs  statement.rs  test_utils.rs  util.rs
src/config/: api_key.rs  config.rs  defaults.rs  llm_configuration.rs  mod.rs
templates/: document_context_summary.prompt.md  document_parsing.prompt.md  md_digestor_TEMP_MISC.prompt.md  md_digestor_chunk_questions.md  md_digestor_chunk_questions.mds  md_digestor_chunk_statements.prompt.md  md_digestor_connections_reflections.prompt.md  md_digestor_first_pass.prompt.md
test_data/: test_statements.md
