[package]
name = "mou"
version = "0.1.0"
edition = "2024"

[dependencies]

num_cpus = "1.17.0"
anyhow = "1.0.98"

swiftide = { version = "=0.27.1", features = [
  "openai",
  "tree-sitter",
  "ollama",
  "swiftide-agents",
  "open-router",
  "fastembed",
  "anthropic",
  "mcp",
  "duckdb",
] }

async-openai = "0.28.1"
async-anthropic = "0.6.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.30.0", optional = true }

tokio = { version = "1.44.2", features = ["full", "sync"] }

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dyn-clone = "1.0.18"
ignore = "0.4.23"
indoc = "2.0.5"
strum = "0.27.1"
strum_macros = "0.27.1"
fastembed = "4.6.0"
url = { version = "2.5.4", features = ["serde"] }
backoff = "0.4.0"
secrecy = { version = "0.10.3", features = ["serde"] }

toml = "0.8.20"
config = { version = "0.15.6", features = ["toml", "convert-case"] }

tera = "1.20.0"

regex = "1.11.1"

duckdb = { version = "=1.3.0", features = ["bundled"] }
libduckdb-sys = { version = "=1.3.0", features = ["bundled"] }

# TODO remove 
async-trait = "0.1.87"
rust-embed = { version = "8.7.0", features = ["debug-embed"] }
dirs = "6.0.0"

[dev-dependencies]
swiftide = { version = "0.27", features = ["test-utils"] }
